--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
-    "expo": "~51.0.22",
+    "expo": "^51.0.24",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
