--- a/package.json
+++ b/package.json
@@ -9,15 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.1",
-    "expo": "^51.0.24",
+    "@expo/metro-runtime": "^3.2.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "expo": "^51.0.32",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "^12.0.10",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.13.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-web": "~0.19.10"
+    "react-native": "^0.74.5",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "^3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-uuid": "^2.0.2",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
